네비게이션 수정

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "normalize.css": "^8.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-loading-overlay": "^1.0.1",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "react-typing-animation": "^1.6.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.1",
@@ -19,7 +21,8 @@
     "build": "npm run tailwind:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
